--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CLEVERIOUS -- Clever People with clever ideas --</title>
   <link href="//cdn.bootcss.com/normalize/3.0.3/normalize.min.css" rel="stylesheet">
-<link href="index.e1aa2989224a881dced9.css?e1aa2989224a881dced9" rel="stylesheet"></head>
+<link href="http://assets.cleverious.com/index.e4286168461773eb32dc.css?e4286168461773eb32dc" rel="stylesheet"></head>
 <body>
   <div id="main">
   </div>
-<script src="vendors.e1aa2989224a881dced9.js?e1aa2989224a881dced9"></script><script src="index.bundle.e1aa2989224a881dced9.js?e1aa2989224a881dced9"></script></body>
+<script src="http://assets.cleverious.com/vendors.e4286168461773eb32dc.js?e4286168461773eb32dc"></script><script src="http://assets.cleverious.com/index.bundle.e4286168461773eb32dc.js?e4286168461773eb32dc"></script></body>
 </html>
