--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CLEVERIOUS -- Clever People with clever ideas --</title>
   <link href="//cdn.bootcss.com/normalize/3.0.3/normalize.min.css" rel="stylesheet">
-<link href="http://assets.cleverious.com/index.bb3bde15fa622f8e9aaf.css?bb3bde15fa622f8e9aaf" rel="stylesheet"></head>
+  <link href="//cdn.bootcss.com/antd/1.3.0/antd.min.css" rel="stylesheet">
+<link href="http://assets.cleverious.com/index.7cc60920a45eef975765.css?7cc60920a45eef975765" rel="stylesheet"></head>
 <body>
   <div id="main">
   </div>
-<script src="http://assets.cleverious.com/vendors.bb3bde15fa622f8e9aaf.js?bb3bde15fa622f8e9aaf"></script><script src="http://assets.cleverious.com/index.bundle.bb3bde15fa622f8e9aaf.js?bb3bde15fa622f8e9aaf"></script></body>
+<script src="http://assets.cleverious.com/vendors.7cc60920a45eef975765.js?7cc60920a45eef975765"></script><script src="http://assets.cleverious.com/index.bundle.7cc60920a45eef975765.js?7cc60920a45eef975765"></script></body>
 </html>
