--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <!--[if (gt IE 10)|!(IE)]><!-->
 <html>
 <!--<![endif]-->
-<head lang="en">
+<head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CLEVERIOUS -- Clever People with clever ideas --</title>
   <link href="//cdn.bootcss.com/normalize/3.0.3/normalize.min.css" rel="stylesheet">
   <link href="//cdn.bootcss.com/antd/1.3.0/antd.min.css" rel="stylesheet">
-<link href="http://assets.cleverious.com/index.7cc60920a45eef975765.css?7cc60920a45eef975765" rel="stylesheet"></head>
+  <script src="//cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
+<link href="http://assets.cleverious.com/index.a12d41d63d9327a99e23.css?a12d41d63d9327a99e23" rel="stylesheet"></head>
 <body>
   <div id="main">
   </div>
-<script src="http://assets.cleverious.com/vendors.7cc60920a45eef975765.js?7cc60920a45eef975765"></script><script src="http://assets.cleverious.com/index.bundle.7cc60920a45eef975765.js?7cc60920a45eef975765"></script></body>
+<script src="http://assets.cleverious.com/vendors.a12d41d63d9327a99e23.js?a12d41d63d9327a99e23"></script><script src="http://assets.cleverious.com/index.bundle.a12d41d63d9327a99e23.js?a12d41d63d9327a99e23"></script></body>
 </html>
