--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
   <link href="//cdn.bootcss.com/normalize/3.0.3/normalize.min.css" rel="stylesheet">
   <link href="//cdn.bootcss.com/antd/1.3.0/antd.min.css" rel="stylesheet">
   <script src="//cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
-<link href="http://assets.cleverious.com/index.61d3dc2f68adb1d46dfe.css?61d3dc2f68adb1d46dfe" rel="stylesheet"></head>
+  <link href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+  <script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link href="http://assets.cleverious.com/index.382788343c1ca96f7129.css?382788343c1ca96f7129" rel="stylesheet"></head>
 <body>
   <div id="main">
   </div>
-<script src="http://assets.cleverious.com/vendors.61d3dc2f68adb1d46dfe.js?61d3dc2f68adb1d46dfe"></script><script src="http://assets.cleverious.com/index.bundle.61d3dc2f68adb1d46dfe.js?61d3dc2f68adb1d46dfe"></script></body>
+<script src="http://assets.cleverious.com/vendors.382788343c1ca96f7129.js?382788343c1ca96f7129"></script><script src="http://assets.cleverious.com/index.bundle.382788343c1ca96f7129.js?382788343c1ca96f7129"></script></body>
 </html>
